2012-10-10  Roland Levillain  <roland@lrde.epita.fr>

	Split the interface of the FFT off from its implementation.

	* mln/transform/fft.hh: Here.

2012-10-10  Roland Levillain  <roland@lrde.epita.fr>

	Stylistic changes in the Fast Fourier Transform.

	* mln/transform/fft.hh: Here.

2012-10-10  Roland Levillain  <roland@lrde.epita.fr>

	Remove dead code in the Fast Fourier Transform.

	* mln/transform/fft.hh: Here.

2012-10-10  Roland Levillain  <roland@lrde.epita.fr>

	Minor corrections in the Fast Fourier Transform.

	* mln/transform/fft.hh
	(internal::_fft<T>::transformed_image() const): Return a const
	reference instead of a copy.
	(internal::_fft<T>::transformed_image_clipped_magn(double, bool)):
	Drop the const before the first argument.
	Properly initialize `max'.
	(internal::_fft<T>::transformed_image_log_magn(double, double, bool)):
	Properly initialize `max'.

2012-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Improve the test of the Fast Fourier Transform.

	* tests/transform/fft.cc: Ensure the inverse transform of the
	transform is pretty much the same as the input image.
	Save the cropped transform.
	Remove dead code.
	* tests/transform/Makefile.am (MOSTLYCLEANFILES):
	Add fft_trans_cropped.pgm.

2012-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Update copyright headers.

	* mln/transform/fft.hh,
	* tests/transform/fft.cc:
	Here.

2012-10-09  Roland Levillain  <roland@lrde.epita.fr>

	* headers.mk, tests/unit_test/unit-tests.mk: Regen.

2012-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Exercise the Fast Fourier Transform.

	* tests/transform/fft.cc: Fix the path to the input image.
	* tests/transform/Makefile.am
	(check_PROGRAMS) [HAVE_FFTW3]: Add fft.
	(fft_SOURCES, fft_CPPFLAGS, fft_LDFLAGS) [HAVE_FFTW3]: New.
	(MOSTLYCLEANFILES): New.

2012-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Fix the Fast Fourier Transform.

	* mln/transform/fft.hh
	(mln::transform::fft<T, internal::fft_real>::fft):